<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2c2c"
    android:padding="15dp"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:id="@+id/create_account_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/login_form_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_title"
        app:layout_constraintVertical_bias="0.15">

        <EditText
            android:id="@+id/user_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#dfdfdf"
            android:ems="10"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#dfdfdf" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#dfdfdf"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#dfdfdf" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#dfdfdf"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingTop="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#dfdfdf" />

        <EditText
            android:id="@+id/phone_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#dfdfdf"
            android:ems="10"
            android:hint="@string/phone_number_field"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="#ffffff"
            android:textColorHint="#dfdfdf" />

    </LinearLayout>

    <TextView
        android:id="@+id/create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_account_title"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_account_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:padding="10dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_profile_btn"
        app:layout_constraintVertical_bias="0.046" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_btn">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#a2a2a2"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="599dp" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="584dp" />

    </LinearLayout>

    <Button
        android:id="@+id/upload_profile_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_bg"
        android:text="@string/upload_profile_string"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_from" />


</androidx.constraintlayout.widget.ConstraintLayout>