<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="#363636">

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circular_image_crop"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:cardCornerRadius="120dp"
        app:cardElevation="10dp"
        android:foregroundGravity="left"
        >
        <ImageView
            android:id="@+id/nav_profile_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_photo_string"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/nav_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/channel_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/nav_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        />

</LinearLayout>